--- a/site/public/PaginaInicial/tlou2.css
+++ b/site/public/PaginaInicial/tlou2.css
@@ -21,7 +21,7 @@
 }
 
 .containerTLOU2 {
-    height: 90vh;
+    height: 60vh;
     width: 90vw;
     margin-left: 5%;
     color: white;
@@ -110,26 +110,29 @@
     font-weight: 400;
     width: 20%;
 }
-
+.blocosTLOU2{
+    display: flex;
+    width: 100%;
+    height: 20%;
+}
 /* Blocos Sobrepondo o Banner */
 .blocoHistoriaGradienteTLOU2 {
     display: flex;
-    position: absolute;
+    position: relative;
     justify-content: center;
     align-items: end;
-    top: 288%;
     margin-left: 5%;
     border-radius: 15px;
     width: 20vh;
     height: 20vh;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.267) 60%);
 }
-
+/* 
 @media (max-width: 1919px){
     .blocoHistoriaGradienteTLOU2{
         top: 292%
     }
-}
+} */
 
 .blocoHistoriaTLOU2 {
     display: flex;
@@ -161,22 +164,21 @@
 
 .blocoPersonagemGradienteTLOU2 {
     display: flex;
-    position: absolute;
+    position: relative;
     justify-content: center;
     align-items: end;
-    top: 288%;
-    margin-left: 17.5%;
+    margin-left: 2%;
     border-radius: 15px;
     width: 20vh;
     height: 20vh;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.082) 60%);
 }
-
+/* 
 @media (max-width: 1919px){
     .blocoPersonagemGradienteTLOU2{
         top: 292%
     }
-}
+} */
 
 .blocoPersonagemGradienteTLOU2:hover {
     animation-name: historiaA;
@@ -211,6 +213,7 @@
     height: 70vh;
     width: 90vw;
     margin-left: 5%;
+    margin-top: 4%;
     font-family: 'Space Grotesk';
     flex-direction: column;
 }
