--- a/site/public/PaginaInicial/tlouhbo.css
+++ b/site/public/PaginaInicial/tlouhbo.css
@@ -20,7 +20,7 @@
 }
 
 .containerTLOUHBO {
-    height: 90vh;
+    height: 60vh;
     width: 90vw;
     margin-left: 5%;
     color: white;
@@ -132,10 +132,9 @@
 /* Blocos Sobrepondo o Banner */
 .blocoEpisodiosGradienteTLOUHBO {
     display: flex;
-    position: absolute;
+    position: relative;
     justify-content: center;
     align-items: end;
-    top: 480%;
     margin-left: 5%;
     border-radius: 15px;
     width: 20vh;
@@ -143,11 +142,6 @@
     background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.123) 60%);
 }
 
-@media (max-width: 1919px){
-    .blocoEpisodiosGradienteTLOUHBO{
-        top: 488%;
-    }
-}
 
 .blocoEpisodiosGradienteTLOUHBO:hover {
     animation-name: historiaA;
@@ -184,6 +178,7 @@
     margin-left: 5%;
     font-family: 'Space Grotesk';
     flex-direction: column;
+    margin-top: 4%;
 }
 
 #tituloInformativoTLOUHBO {
