--- a/site/public/PaginaInicial/tlouhbo.css
+++ b/site/public/PaginaInicial/tlouhbo.css
@@ -114,7 +114,7 @@
         top: 426.5%;
     }
 }
-
+ 
 #playIcon3 {
     color: white;
     font-size: 2.5vmax;
@@ -129,6 +129,11 @@
     width: 20%;
 }
 
+.blocosTLOUHBO{
+    display: flex;
+    width: 100%;
+    height: 20%;
+}
 /* Blocos Sobrepondo o Banner */
 .blocoEpisodiosGradienteTLOUHBO {
     display: flex;
@@ -139,13 +144,13 @@
     border-radius: 15px;
     width: 20vh;
     height: 20vh;
-    background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.123) 60%);
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.082) 60%);
 }
 
 
 .blocoEpisodiosGradienteTLOUHBO:hover {
     animation-name: historiaA;
-    animation-duration: 1s;
+    animation-duration: 0.2s;
     animation-fill-mode: forwards;
     cursor: pointer;
 }
@@ -249,7 +254,7 @@
     border-top-right-radius: 9px;
     border-bottom-right-radius: 9px;
     background: linear-gradient(120deg, #731CDB 52.42%, #FDC706 53.21%);
-    animation-duration: 0.5s;
+    animation-duration: 0.2s;
     animation-fill-mode: forwards;
 }
 
