--- a/site/public/PaginaTLOU1/tlou1header.css
+++ b/site/public/PaginaTLOU1/tlou1header.css
@@ -142,7 +142,7 @@
     justify-content: center;
     box-sizing: border-box;
     border-radius: 5px;
-    background-color: #fdc706;
+    background-color: #FDC706A6;
     font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
 }
